# objectdms

./: .env.example  .gitignore  README.md  Roadmap.md  pyproject.toml  setup.py
backend/: fix_encoding.py  pyproject.toml  requirements-test.txt  requirements.txt  run.sh  run_tests.sh
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  documents.py  sharing.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  metadata.py  monitoring.py  security.py  storage.py
backend/app/core/middleware/: audit.py
backend/app/core/security/: __init__.py  access_control.py  jwt.py  password.py
backend/app/models/: audit.py  base.py  document.py  role.py  tag.py  user.py
backend/app/repositories/: __init__.py  base.py  document.py  tag.py  user.py
backend/app/schemas/: auth.py  document.py  tag.py  user.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/unit/: __init__.py  test_access_control.py  test_document_model.py  test_tag_model.py  test_tag_repository.py  test_user_repository.py
